@@ -51,12 +51,6 @@ MAIL_FROM_ADDRESS=ValidEmailAddress
 MAIL_FROM_NAME="Some Name"
 APP_EMAIL_NEW_USERS_NOTIFICATION=EmailThatWillSendNotificationsForNewUser
 
-# Default timezone for new users. Users can change this setting inside the
-# application at their leisure.
-# Must be exactly one of the timezones used in this list (column TZ in the table):
-# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-APP_DEFAULT_TIMEZONE=US/Eastern
-
 # Default locale used in the application.
 APP_DEFAULT_LOCALE=en
 
