@@ -158,7 +158,9 @@ class ContactsController extends Controller
         $contact->load(['notes' => function ($query) {
             $query->orderBy('updated_at', 'desc');
         }]);
-        $contact->last_consulted_at = Carbon::now(auth()->user()->timezone);
+
+        $contact->last_consulted_at = now();
+
         $contact->save();
         $relationships = $contact->relationships;
         // get love relationship type
@@ -516,7 +518,7 @@ class ContactsController extends Controller
             throw new Exception(trans('people.stay_in_touch_invalid'));
         }
 
-        $contact->setStayInTouchTriggerDate($frequency, auth()->user()->timezone);
+        $contact->setStayInTouchTriggerDate($frequency);
 
         return $frequency;
     }
