@@ -128,7 +128,7 @@ class SpecialDate extends Model
         $reminder->title = $title;
         $reminder->save();
 
-        $reminder->calculateNextExpectedDate($reminder->account->timezone())->save();
+        $reminder->calculateNextExpectedDate()->save();
 
         $this->reminder_id = $reminder->id;
         $this->save();
