@@ -105,7 +105,7 @@ class ReminderTest extends TestCase
         $reminder->frequency_type = 'week';
         $this->assertEquals(
             '1980-01-08',
-            $reminder->calculateNextExpectedDate($timezone)->next_expected_date->toDateString()
+            $reminder->calculateNextExpectedDate()->next_expected_date->toDateString()
         );
 
         Carbon::setTestNow(Carbon::create(2017, 1, 1));
@@ -113,21 +113,21 @@ class ReminderTest extends TestCase
         $reminder->frequency_type = 'week';
         $this->assertEquals(
             '2017-01-03',
-            $reminder->calculateNextExpectedDate($timezone)->next_expected_date->toDateString()
+            $reminder->calculateNextExpectedDate()->next_expected_date->toDateString()
         );
 
         $reminder->frequency_type = 'month';
         $reminder->next_expected_date = '1980-01-01 10:10:10';
         $this->assertEquals(
             '2017-02-01',
-            $reminder->calculateNextExpectedDate($timezone)->next_expected_date->toDateString()
+            $reminder->calculateNextExpectedDate()->next_expected_date->toDateString()
         );
 
         $reminder->frequency_type = 'year';
         $reminder->next_expected_date = '1980-01-01 10:10:10';
         $this->assertEquals(
             '2018-01-01',
-            $reminder->calculateNextExpectedDate($timezone)->next_expected_date->toDateString()
+            $reminder->calculateNextExpectedDate()->next_expected_date->toDateString()
         );
 
         Carbon::setTestNow(Carbon::create(2017, 1, 1));
@@ -135,7 +135,7 @@ class ReminderTest extends TestCase
         $reminder->frequency_type = 'week';
         $this->assertEquals(
             '2017-01-08',
-            $reminder->calculateNextExpectedDate($timezone)->next_expected_date->toDateString()
+            $reminder->calculateNextExpectedDate()->next_expected_date->toDateString()
         );
 
         Carbon::setTestNow(Carbon::create(2017, 1, 1));
@@ -143,7 +143,7 @@ class ReminderTest extends TestCase
         $reminder->frequency_type = 'week';
         $this->assertEquals(
             '2017-02-02',
-            $reminder->calculateNextExpectedDate($timezone)->next_expected_date->toDateString()
+            $reminder->calculateNextExpectedDate()->next_expected_date->toDateString()
         );
     }
 
